# ts-auth-ui

./: .env.example  .eslintignore  .gitignore  .prettierignore  Dockerfile  README.md  default.conf.template  health.html  index.html  maintenance.html  manifest.json  package.json  pnpm-lock.yaml  service-worker.js  signup.html  svelte.config.js  vite.config.js
.github/workflows/: web.yml
helm/auth/: Chart.yaml  README.md  values.yaml
helm/auth/templates/: _helpers.tpl  config-environment.yaml  deployment.yaml  ingress.yaml  pod-autoscaler.yaml  service.yaml
internal/: env.js  version.json
internal/immutable/assets/: 0.B6ef9ED9.css  0.CHzrF5Qv.css  Header.Ckn9IwLX.css  Header.EIHvYF4Y.css  _layout.BP2RFGcd.css  _layout.DS3EUn2B.css
internal/immutable/chunks/: ApplicationEditor.BlynSwmE.js  ApplicationEditor.BxSCPIDS.js  ApplicationEditor.CqKNG0zg.js  ApplicationEditor.wp64iW0g.js  Dropdown.0U9H-2Vd.js  Dropdown.DieFkKij.js  Header.D9IGo_Gz.js  Header.DT-_o_As.js  Header.DiokI7S8.js  Header.zuumELNE.js  Icon.BqYKNaj_.js  Icon.BzT3WIqH.js  Icon.Cnhm-NIa.js  Modal.CJ0dfoIn.js  Modal.X-lIdQyS.js  Profile.CNRv9GbV.js  Spinner.BF-bUlGL.js  Spinner.DcLjFOas.js  Spinner.DpnkzrsM.js  circle-check.DPLRMjG-.js  circle-check.qZByWzeP.js  each.BMLb9Nez.js  each.C1d7mFj1.js  each.CnTCTXiE.js  entry.5DHIJE4I.js  entry.CKo0n49U.js  entry.Dfa5j_51.js  entry.PqAeg84Z.js  errors.8vFLI_ic.js  (+41 more)
src/: app.html  app.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: errors.ts  util.ts
src/routes/: +error.svelte  +layout.svelte
(+184 files in other folders)
